# _build-index

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml  prune-r2.yml  publish.yml
actions/create-reader-token/: action.yml
config/: astral-sh-build.toml  index.toml  retain-artifacts.toml
docs/: CHANNELS.md  CONFIGURATION.md  PUBLISHING.md
github-apps/: README.md  reader.manifest.json
scripts/: register_reader_app.py  sync_r2.sh
src/build_index/: __init__.py  cli.py  collection.py  config.py  github.py  index_tree.py  mirror.py  pages.py  r2.py  r2_prune.py  r2_sync.py  register_reader_app.py
src/build_index/templates/: landing.html
terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/tests/: index.tftest.hcl
tests/: test_collection.py  test_config.py  test_github.py  test_github_app.py  test_index_tree.py  test_lockfile.py  test_mirror.py  test_pages.py  test_r2_prune.py  test_r2_sync.py
tests/fixtures/: index.toml
